--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,23 +2,23 @@
 project_name: "Medical-Llama-3B-Nano"
 output_dir: "./outputs"
 
-# Model Settings (Matches your snippet)
+# Model Settings
 model_name: "meta-llama/Llama-3.2-3B-Instruct"
-use_4bit: true
-max_seq_length: 512
+use_4bit: true        
+max_seq_length: 2048  
 
-# Training Args
-batch_size: 1
-grad_accumulation: 4
+
+batch_size: 16        
+grad_accumulation: 2  
 learning_rate: 2.0e-4
-epochs: 1
-optim: "paged_adamw_8bit"
+epochs: 3           
+optim: "paged_adamw_32bit"
 
-# LoRA Params (Matches your snippet)
-lora_r: 16
-lora_alpha: 32
+# LoRA Params
+lora_r: 32           
+lora_alpha: 64
 lora_dropout: 0.05
 
-# Data Paths
-raw_data_dir: "./sampled_data" 
+# Data Paths (Ensure these folders exist on VM)
+raw_data_dir: "./sampled_data"
 processed_data_dir: "./data/ready"
